--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
         <section id="cv">
             <h2>Mon CV</h2>
             <p>Voici mon CV au format web :</p>
-            <a href="CV.pdf" download>Télécharger mon CV (PDF)</a>
+            <a href="PDF/CV.pdf" download>Télécharger mon CV (PDF)</a>
         </section>
 
         <section id="attestation">
             <h2>Attestation de stage</h2>
             <p>Vous pouvez consulter mon attestation de stage :</p>
-            <iframe src="Attestation stage Anne-Lou.pdf" width="100%" height="500px"></iframe>
+            <iframe src="PDF/Attestation stage Anne-Lou.pdf" width="100%" height="500px"></iframe>
         </section>
 
         <section id="rapport">
             <h2>Rapport de stage</h2>
             <p>Voici un lien pour consulter mon rapport de stage :</p>
-            <a href="Rapport de stage.pdf" download>Télécharger le rapport</a>
+            <a href="PDF/Rapport de stage.pdf" download>Télécharger le rapport</a>
         </section>
 
         <section id="veille">
             <h2>Veille technologique</h2>
-            <p>Retrouvez ici mes recherches et mes analyses sur les tendances technologiques :</p>
+            <p>Retrouvez ici mes recherches et mes analyses sur les tendances du modèle Zero Trust :</p>
             <ul>
-                <li><a href="#veille1">Sujet 1 : Virtualisation</a></li>
+                <li><a href="veille/veille.html">Sujet : Zero Trust</a></li>
             </ul>
         </section>
 
