--- a/veille/index.html
+++ b/veille/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veille Technologique - Modèle Zero Trust</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../global.css">
 </head>
 <body>
     <header>
@@ -13,7 +13,6 @@
             <nav>
                 <ul>
                     <li><a href="../index.html">Retour au portfolio</a></li>
-                    <li><a href="#zero-trust">Modèle Zero Trust</a></li>
                 </ul>
             </nav>
         </div>
