--- a/veille/index.html
+++ b/veille/index.html
@@ -23,7 +23,7 @@
             <h2>Le Modèle Zero Trust</h2>
             <p>Le modèle de sécurité Zero Trust est une approche qui n'accorde aucune confiance par défaut, qu'elle soit interne ou externe au réseau. Voici les sous-thèmes que je vais explorer dans cette veille :</p>
             <ul>
-                <li><a href="veille/zero-trust-intro.html">Introduction au modèle Zero Trust</a></li>
+                <li><a href="../veille/zero-trust-intro.html">Introduction au modèle Zero Trust</a></li>
                 <li><a href="veille/segmentation.html">Mise en place d’une architecture Zero Trust dans un environnement réseau</a></li>
                 <li><a href="veille/gestion-acces.html">L’impact du Zero Trust sur la gestion des accès réseau</a></li>
                 <li><a href="veille/zero-trust-cloud.html">Zero Trust et les réseaux hybrides ou multi-cloud</a></li>
