--- a/index.html
+++ b/index.html
@@ -1,69 +1,43 @@
 <!DOCTYPE html>
-<html lang="fr">
-
-
+<html>
+    
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Anne-Lou Delage-Davies</title>
-    <link rel="stylesheet" href="global.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mon Portfolio SIO SISR</title>
+  <link rel="stylesheet" href="global.css">
 </head>
 
 
 <body>
-    <header>
-        <div class="container">
-            <h1>Mon Portfolio</h1>
-            <nav>
-                <ul>
-                    <li><a href="#cv">CV</a></li>
-                    <li><a href="#attestation">Attestation</a></li>
-                    <li><a href="#rapport">Rapport</a></li>
-                    <li><a href="#veille">Veille</a></li>
-                    <li><a href="#certifications">Certifications</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <header>
+    <h1>Anne-Lou Delage-Davies</h1>
+    <h2>Portfolio BTS SIO SISR</h2>
+  </header>
 
-    <main>
-        <section id="cv">
-            <h2>Mon CV</h2>
-            <p>Voici mon CV au format web :</p>
-            <a href="PDF/CV.pdf" download>Télécharger mon CV (PDF)</a>
-        </section>
+  <main>
+    <section id="a-propos">
+      <h2>À propos</h2>
+      <p>Une brève présentation de toi et de ton parcours.</p>
+    </section>
 
-        <section id="attestation">
-            <h2>Attestation de stage</h2>
-            <p>Vous pouvez consulter mon attestation de stage :</p>
-            <iframe src="PDF/Attestation stage Anne-Lou.pdf" width="100%" height="500px"></iframe>
-        </section>
+    <section id="portfolio">
+      <h2>Portfolio</h2>
+      <ul>
+        <li><a href="PDF/CV.pdf">CV</a></li>
+        <li><a href="PDF/Rapport de stage.pdf">Rapport de Stage</a></li>
+        <li><a href="PDF/Attestation stage Anne-Lou.pdf">Attestation</a></li>
+      </ul>
+    </section>
 
-        <section id="rapport">
-            <h2>Rapport de stage</h2>
-            <p>Voici un lien pour consulter mon rapport de stage :</p>
-            <a href="PDF/Rapport de stage.pdf" download>Télécharger le rapport</a>
-        </section>
+    <section id="zero-trust">
+      <h2>Veille sur le Zero Trust</h2>
+      </section>
+  </main>
 
-        <section id="veille">
-            <h2>Veille technologique</h2>
-            <p>Retrouvez ici mes recherches et mes analyses sur les tendances du modèle Zero Trust :</p>
-            <ul>
-                <li><a href="veille/veille.html">Sujet : Zero Trust</a></li>
-            </ul>
-        </section>
-
-        <section id="certifications">
-            <h2>Certifications</h2>
-            <p>Voici mes certifications :</p>
-            <ul>
-                <li>Certification PIX</li>
-            </ul>
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2025 - Anne-Lou Delage-Davies. Tous droits réservés.</p>
-    </footer>
+  <footer>
+    <p>Anne-Lou Delage-Davies - 2025</p>
+  </footer>
 </body>
+
 </html>
