--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     </section>
 
     <section id="zero-trust">
-      <h2>Veille sur le Zero Trust</h2>
+      <h2>Veille informatique</h2>
+      <li><a href="veille.html">Zero Trust</a></li>
       </section>
   </main>
 
