--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   </main>
 
   <footer>
-    <p>Anne-Lou Delage-Davies - 2025</p>
-  </footer>
+    <p>© 2025 - Anne-Lou Delage-Davies. Tous droits réservés.</p>
+</footer>
 </body>
 
 </html>
