--- a/veille.html
+++ b/veille.html
@@ -6,12 +6,16 @@
   <title>Veille Zero Trust</title>
   <link rel="stylesheet" href="global.css">
 </head>
+
+
+
 <body>
   <header>
     <h1>Veille Zero Trust</h1>
-    <a href="index.html">Portfolio</a>
+    <a href="index.html">&lsaquo;&lsaquo; retour</a>
   </header>
 
+  
   <main>
     <section id="introduction">
       <h2>Introduction au Zero Trust</h2>
@@ -38,6 +42,7 @@
       <h2>Veille Active : Ressources et Actualités</h2>
       </section>
   </main>
+
 
   <footer>
     </footer>
