--- a/veille.html
+++ b/veille.html
@@ -6,10 +6,15 @@
     <title>Veille Zero Trust - Anne-Lou Delage-Davies</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body class="fade-in">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom sticky-top">
         <div class="container">
+            <a class="navbar-brand" href="index.html">Anne-Lou Delage-Davies</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
@@ -26,45 +31,74 @@
         </div>
     </nav>
 
-    <header class="bg-primary text-white text-center py-5 slide-in-left">
-        <h1>Veille Zero Trust</h1>
+    <header class="bg-primary text-white text-center py-5 slide-in-left" style="background-image: url('https://source.unsplash.com/random/1600x900?cybersecurity'); height: 50vh; display: flex; align-items: center; justify-content: center;">
+        <h1 class="display-4">Veille Zero Trust</h1>
     </header>
 
     <main class="container my-5">
-        <section id="introduction" class="mb-5 slide-in-right">
-            <h2 class="mb-3">Introduction au Zero Trust</h2>
-            <p>Découvrez comment le modèle Zero Trust révolutionne la cybersécurité dans les réseaux modernes.</p>
+        <section id="introduction" class="card card-custom mb-4 zoom-effect">
+            <div class="card-body">
+                <h2 class="card-title mb-3">Introduction au Zero Trust</h2>
+                <p class="card-text">Découvrez comment le modèle Zero Trust révolutionne la cybersécurité dans les réseaux modernes.</p>
+                <button class="btn btn-primary btn-custom" data-bs-toggle="collapse" data-bs-target="#introContent">En savoir plus</button>
+                <div class="collapse mt-3" id="introContent">
+                    <p>Le modèle Zero Trust est une approche de sécurité qui suppose qu'aucun utilisateur, appareil ou réseau ne doit être considéré comme fiable par défaut, même s'il se trouve à l'intérieur du périmètre de l'entreprise.</p>
+                </div>
+            </div>
         </section>
 
-        <section id="origines" class="mb-5 slide-in-left">
-            <h2 class="mb-3">Origines et Évolution du Zero Trust</h2>
-            <p>Explorez les origines du concept Zero Trust et son évolution dans le domaine de la sécurité informatique.</p>
+        <section id="origines" class="card card-custom mb-4 zoom-effect">
+            <div class="card-body">
+                <h2 class="card-title mb-3">Origines et Évolution du Zero Trust</h2>
+                <p class="card-text">Explorez les origines du concept Zero Trust et son évolution dans le domaine de la sécurité informatique.</p>
+                <button class="btn btn-primary btn-custom" data-bs-toggle="collapse" data-bs-target="#originesContent">En savoir plus</button>
+                <div class="collapse mt-3" id="originesContent">
+                    <p>Le concept de Zero Trust a été introduit en 2010 par John Kindervag, alors analyste chez Forrester Research. Depuis, il a considérablement évolué pour s'adapter aux défis de sécurité modernes.</p>
+                </div>
+            </div>
         </section>
 
-        <section id="principes" class="mb-5 slide-in-right">
-            <h2 class="mb-3">Les Principes du Zero Trust</h2>
-            <p>Apprenez les principes fondamentaux qui sous-tendent l'approche Zero Trust en matière de sécurité.</p>
+        <section id="principes" class="card card-custom mb-4 zoom-effect">
+            <div class="card-body">
+                <h2 class="card-title mb-3">Les Principes du Zero Trust</h2>
+                <p class="card-text">Apprenez les principes fondamentaux qui sous-tendent l'approche Zero Trust en matière de sécurité.</p>
+                <button class="btn btn-primary btn-custom" data-bs-toggle="collapse" data-bs-target="#principesContent">En savoir plus</button>
+                <div class="collapse mt-3" id="principesContent">
+                    <ul>
+                        <li>Vérifier explicitement</li>
+                        <li>Utiliser l'accès le moins privilégié</li>
+                        <li>Supposer la violation</li>
+                    </ul>
+                </div>
+            </div>
         </section>
 
-        <section id="technologies" class="mb-5 slide-in-left">
-            <h2 class="mb-3">Technologies et Outils associés au Zero Trust</h2>
-            <p>Découvrez les technologies et les outils qui permettent de mettre en œuvre une stratégie Zero Trust.</p>
+        <section id="technologies" class="card card-custom mb-4 zoom-effect">
+            <div class="card-body">
+                <h2 class="card-title mb-3">Technologies et Outils associés au Zero Trust</h2>
+                <p class="card-text">Découvrez les technologies et les outils qui permettent de mettre en œuvre une stratégie Zero Trust.</p>
+                <button class="btn btn-primary btn-custom" data-bs-toggle="collapse" data-bs-target="#techContent">En savoir plus</button>
+                <div class="collapse mt-3" id="techContent">
+                    <p>Les technologies clés incluent l'authentification multifactorielle (MFA), le contrôle d'accès basé sur les rôles (RBAC), et la microsegmentation du réseau.</p>
+                </div>
+            </div>
         </section>
 
-        <section id="impact" class="mb-5 slide-in-right">
-            <h2 class="mb-3">L'Impact et l'Avenir du Zero Trust</h2>
-            <p>Analysez l'impact actuel du Zero Trust sur la sécurité des entreprises et explorez son avenir potentiel.</p>
+        <section id="impact" class="card card-custom mb-4 zoom-effect">
+            <div class="card-body">
+                <h2 class="card-title mb-3">L'Impact et l'Avenir du Zero Trust</h2>
+                <p class="card-text">Analysez l'impact actuel du Zero Trust sur la sécurité des entreprises et explorez son avenir potentiel.</p>
+                <button class="btn btn-primary btn-custom" data-bs-toggle="collapse" data-bs-target="#impactContent">En savoir plus</button>
+                <div class="collapse mt-3" id="impactContent">
+                    <p>Le Zero Trust transforme la façon dont les entreprises abordent la sécurité, en passant d'un modèle de confiance implicite à un modèle de vérification continue.</p>
+                </div>
+            </div>
         </section>
 
-        <section id="veille-active" class="mb-5 slide-in-left">
-            <h2 class="mb-3">Veille Active : Ressources et Actualités</h2>
-            <p>Restez informé des dernières actualités et ressources concernant le Zero Trust.</p>
-        </section>
-
-        <a href="index.html" class="btn btn-primary">&laquo; Retour à l'accueil</a>
+        <a href="index.html" class="btn btn-primary btn-custom">&laquo; Retour à l'accueil</a>
     </main>
 
-    <footer class="text-center py-3 slide-in-left">
+    <footer class="text-center py-3 slide-in-left bg-dark text-white">
         <p>&copy; 2025 - Anne-Lou Delage-Davies. Tous droits réservés.</p>
     </footer>
 
