--- a/veille.html
+++ b/veille.html
@@ -19,7 +19,10 @@
                         <a class="nav-link" href="index.html#portfolio">Documents</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#veille">Veille informatique</a>
+                        <a class="nav-link" href="CV.html">CV</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="veille.html">Veille informatique</a>
                     </li>
                 </ul>
             </div>
