--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
 <body class="fade-in">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Anne-Lou Delage-Davies</a>
+            <a class="navbar-brand">Anne-Lou Delage-Davies</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#a-propos">À propos</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#portfolio">Documents</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#veille">Veille informatique</a>
+                        <a class="nav-link" href="CV.html">CV</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="veille.html">Veille informatique</a>
                     </li>
                 </ul>
             </div>
@@ -39,7 +39,6 @@
     </nav>
 
     <header class="bg-primary text-white text-center py-5 slide-in-left">
-
         <h2>Bienvenue sur mon portfolio de BTS SIO SISR</h2>
     </header>
 
@@ -93,8 +92,8 @@
     <footer>
         <div class="footer-container">
             <div class="contact">
-                <p><i class="fas fa-envelope"></i> <a href="mail">annelou.delagedavies@live.fr</a></p>
-                <p><i class="fas fa-phone"></i> <a href="tel">+33 7 89 70 57 33</a></p>
+                <p><i class="fas fa-envelope"></i> annelou.delagedavies@live.fr</p>
+                <p><i class="fas fa-phone"></i> +33 7 89 70 57 33</p>
             </div>
             <div class="social-media">
                 <a href="https://www.instagram.com/anneloudldv/" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
