--- a/CV.html
+++ b/CV.html
@@ -26,8 +26,11 @@
                         <a class="nav-link" href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#portfolio">Documents</a>
+                        <a class="nav-link" href="CV.html">CV</a>
                     </li>
+                    <li class="nav-item">
+                    <!--<a class="nav-link" href="projets_competences.html">Projets et Compétences</a> -->
+                </li>
                     <li class="nav-item">
                         <a class="nav-link" href="veille.html">Veille informatique</a>
                     </li>
@@ -36,9 +39,11 @@
         </div>
     </nav>
 
+    <header class="bg-primary text-center py-5 slide-in-left">
+        <h1>Curriculum Vitae</h1>
+    </header>
 
     <main class="container my-5">
-        <h1 class="text-center mb-4">Curriculum Vitae</h1>
 
         <section class="mb-5">
             <h2>Coordonnées</h2>
