--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="fade-in">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom sticky-top">
         <div class="container">
             <a class="navbar-brand">Anne-Lou Delage-Davies</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,10 +25,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Documents</a>
+                        <a class="nav-link" href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="CV.html">CV</a>
+                    </li>
+                    <li class="nav-item">
+                    <!--<a class="nav-link" href="projets_competences.html">Projets et Compétences</a> -->
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="veille.html">Veille informatique</a>
@@ -38,8 +41,8 @@
         </div>
     </nav>
 
-    <header class="bg-primary text-white text-center py-5 slide-in-left">
-        <h2>Bienvenue sur mon portfolio de BTS SIO SISR</h2>
+    <header class="bg-primary text-center py-5 slide-in-left">
+        <h1>Bienvenue sur mon portfolio de BTS SIO SISR</h1>
     </header>
 
     <main class="container my-5">
@@ -56,6 +59,7 @@
                         <div class="card-body">
                             <h5 class="card-title">CV</h5>
                             <a href="PDF/CV.pdf" class="btn btn-primary" target="_blank">Voir le CV</a>
+                            <a href="CV.html" class="btn btn-secondary" target="_blank">Voir le CV Web</a>
                         </div>
                     </div>
                 </div>
@@ -92,8 +96,8 @@
     <footer>
         <div class="footer-container">
             <div class="contact">
-                <p><i class="fas fa-envelope"></i> annelou.delagedavies@live.fr</p>
-                <p><i class="fas fa-phone"></i> +33 7 89 70 57 33</p>
+                <h5><i class="fas fa-envelope"></i> annelou.delagedavies@live.fr</h5>
+                <h5><i class="fas fa-phone"></i> +33 7 89 70 57 33</h5>
             </div>
             <div class="social-media">
                 <a href="https://www.instagram.com/anneloudldv/" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
