--- a/veille.html
+++ b/veille.html
@@ -3,24 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Veille Zero Trust - Anne-Lou Delage-Davies</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 <body class="fade-in">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
+            <a class="navbar-brand">Anne-Lou Delage-Davies</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#a-propos">À propos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#portfolio">Documents</a>
+                        <a class="nav-link" href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="CV.html">CV</a>
                     </li>
+                    <li class="nav-item">
+                    <!--<a class="nav-link" href="projets_competences.html">Projets et Compétences</a> -->
+                </li>
                     <li class="nav-item">
                         <a class="nav-link" href="veille.html">Veille informatique</a>
                     </li>
@@ -29,37 +37,37 @@
         </div>
     </nav>
 
-    <header class="bg-primary text-white text-center py-5 slide-in-left">
+    <header class="bg-primary text-center py-5 slide-in-left">
         <h1>Veille Zero Trust</h1>
     </header>
 
     <main class="container my-5">
-        <section id="introduction" class="mb-5 slide-in-right">
+        <section class="mb-5 slide-in-right">
             <h2 class="mb-3">Introduction au Zero Trust</h2>
             <p>Découvrez comment le modèle Zero Trust révolutionne la cybersécurité dans les réseaux modernes.</p>
         </section>
 
-        <section id="origines" class="mb-5 slide-in-left">
+        <section class="mb-5 slide-in-left">
             <h2 class="mb-3">Origines et Évolution du Zero Trust</h2>
             <p>Explorez les origines du concept Zero Trust et son évolution dans le domaine de la sécurité informatique.</p>
         </section>
 
-        <section id="principes" class="mb-5 slide-in-right">
+        <section class="mb-5 slide-in-right">
             <h2 class="mb-3">Les Principes du Zero Trust</h2>
             <p>Apprenez les principes fondamentaux qui sous-tendent l'approche Zero Trust en matière de sécurité.</p>
         </section>
 
-        <section id="technologies" class="mb-5 slide-in-left">
+        <section class="mb-5 slide-in-left">
             <h2 class="mb-3">Technologies et Outils associés au Zero Trust</h2>
             <p>Découvrez les technologies et les outils qui permettent de mettre en œuvre une stratégie Zero Trust.</p>
         </section>
 
-        <section id="impact" class="mb-5 slide-in-right">
+        <section class="mb-5 slide-in-right">
             <h2 class="mb-3">L'Impact et l'Avenir du Zero Trust</h2>
             <p>Analysez l'impact actuel du Zero Trust sur la sécurité des entreprises et explorez son avenir potentiel.</p>
         </section>
 
-        <section id="veille-active" class="mb-5 slide-in-left">
+        <section class="mb-5 slide-in-left">
             <h2 class="mb-3">Veille Active : Ressources et Actualités</h2>
             <p>Restez informé des dernières actualités et ressources concernant le Zero Trust.</p>
         </section>
