--- a/CV.html
+++ b/CV.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>CV Portfolio</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 
@@ -111,6 +114,20 @@
             </ul>
         </section>
     </main>
+
+    <footer>
+        <div class="footer-container">
+            <div class="contact">
+                <h5><i class="fas fa-envelope"></i> annelou.delagedavies@live.fr</h5>
+                <h5><i class="fas fa-phone"></i> +33 7 89 70 57 33</h5>
+            </div>
+            <div class="social-media">
+                <a href="https://www.instagram.com/anneloudldv/" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="www.linkedin.com/in/anne-lou-delage-davies" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/walfron" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
