--- a/veille.html
+++ b/veille.html
@@ -75,8 +75,18 @@
         <a href="index.html" class="btn btn-primary">&laquo; Retour à l'accueil</a>
     </main>
 
-    <footer class="text-center py-3 slide-in-left">
-        <p>&copy; 2025 - Anne-Lou Delage-Davies. Tous droits réservés.</p>
+    <footer>
+        <div class="footer-container">
+            <div class="contact">
+                <h5><i class="fas fa-envelope"></i> annelou.delagedavies@live.fr</h5>
+                <h5><i class="fas fa-phone"></i> +33 7 89 70 57 33</h5>
+            </div>
+            <div class="social-media">
+                <a href="https://www.instagram.com/anneloudldv/" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="www.linkedin.com/in/anne-lou-delage-davies" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/walfron" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
+            </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
