--- a/veille.html
+++ b/veille.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="CV.html">CV</a>
                     </li>
                     <li class="nav-item">
-                    <!--<a class="nav-link" href="projets_competences.html">Projets et Compétences</a> -->
+                    <a class="nav-link" href="projets_competences.html">Projets et Compétences</a>
                 </li>
                     <li class="nav-item">
                         <a class="nav-link" href="veille.html">Veille informatique</a>
@@ -70,6 +70,14 @@
         <section class="mb-5 slide-in-left">
             <h2 class="mb-3">Veille Active : Ressources et Actualités</h2>
             <p>Restez informé des dernières actualités et ressources concernant le Zero Trust.</p>
+        </section>
+
+        <section class="mb-5 slide-in-right">
+            <h2 class="mb-3">Sources</h2>
+            <p><a href="https://www.catonetworks.com/fr/zero-trust-network-access/" target="_blank">CATO Networks - L’évolution de la sécurité Zero Trust et ses 5 composants clés</a></p>
+            <p><a href="https://cyber.gouv.fr/publications/le-modele-zero-trust" target="_blank">ANSSI - Le modèle Zero Trust</a></p>
+            <p><a href="https://www.microsoft.com/fr-fr/security/business/security-101/what-is-zero-trust-architecture" target="_blank">Microsoft - Qu’est-ce que l’architecture Zero Trust ?</a></p>
+            <p><a href="https://www.cloudflare.com/fr-fr/zero-trust/" target="_blank">Cloudflare - Simplifiez l'adoption du SSE et du SASE</a></p>
         </section>
 
         <a href="index.html" class="btn btn-primary">&laquo; Retour à l'accueil</a>
