--- a/CV.html
+++ b/CV.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="CV.html">CV</a>
                     </li>
                     <li class="nav-item">
-                    <!--<a class="nav-link" href="projets_competences.html">Projets et Compétences</a> -->
+                    <a class="nav-link" href="projets_competences.html">Projets et Compétences</a>
                 </li>
                     <li class="nav-item">
                         <a class="nav-link" href="veille.html">Veille informatique</a>
